# async-hid

./: .gitignore  Cargo.toml  README.md  justfile
examples/: enumerate_devices.rs  open_device.rs  read_ds4_callibration.rs  read_feature_report.rs  read_loop.rs  read_with_timeout.rs  read_write.rs  watch_devices.rs  write_feature_report.rs
examples/wasm/: Cargo.toml  Trunk.toml  index.html
examples/wasm/src/: main.rs
src/: device.rs  device_id.rs  device_info.rs  error.rs  lib.rs  report.rs  traits.rs  utils.rs
src/backend/: mod.rs
src/backend/hidraw/: descriptor.rs  ioctl.rs  mod.rs  uevent.rs  utils.rs
src/backend/iohidmanager/: context.rs  device.rs  device_info.rs  manager.rs  mod.rs  read_writer.rs  runloop.rs  service.rs  utils.rs
src/backend/iohidmanager2/: device_info.rs  mod.rs  read_writer.rs
src/backend/webhid/: mod.rs
src/backend/win32/: buffer.rs  device.rs  interface.rs  mod.rs  mutex.rs  string.rs  waiter.rs
src/backend/winrt/: buffer.rs  device.rs  mod.rs  utils.rs  waiter.rs  win32.rs
