[package]
name = "async-hid"
version = "0.1.0"
authors = [ "sidit77" ]
repository = "https://github.com/sidit77/async-hid"
description = "A async library for interacting with HID devices"
readme = "README.md"
license = "MIT"
keywords = ["hid", "usb", "async", "wrapper"]
categories = ["api-bindings", "asynchronous", "hardware-support"]
edition = "2021"

[dependencies]
log = "0.4"
futures-core = "0.3"

[target."cfg(target_os = \"windows\")".dependencies]
futures-lite = "1"
flume = "0.11"
windows = { version = "0.51", features = [
    "Devices_Enumeration",
    "Devices_HumanInterfaceDevice",
    "Foundation",
    "Foundation_Collections",
    "Storage",
    "Storage_Streams",
    "Win32_System_WinRT",

    "Win32_Devices_HumanInterfaceDevice",
    "Win32_Foundation",
    "Win32_Security",
    "Win32_Storage_FileSystem"
]}

[target."cfg(target_os = \"linux\")".dependencies]
tokio = { version = "1", features = ["net"] }
nix = { version = "0.27", features = ["fs", "ioctl"] }

[target."cfg(target_os = \"macos\")".dependencies]
async-lock = "2"
async-channel = "1"
bytes = "1"
core-foundation = "0.9"
io-kit-sys = "0.3"
mach2 = "0.4"

[dev-dependencies]
simple_logger = "4"
futures-lite = "1"
tokio = { version = "1", features = ["full"] }