[package]
name = "async-hid"
version = "0.2.0"
authors = [ "sidit77" ]
repository = "https://github.com/sidit77/async-hid"
description = "A async library for interacting with HID devices"
readme = "README.md"
license = "MIT"
keywords = ["hid", "usb", "async", "wrapper"]
categories = ["api-bindings", "asynchronous", "hardware-support"]
edition = "2021"

[features]
default = ["async-io", "win32"]
tokio = ["dep:tokio"]
async-io = ["dep:async-io"]
win32 = ["dep:atomic-waker"]
winrt = ["dep:flume"]

[dependencies]
log = "0.4"
futures-core = "0.3"
static_assertions = "1.1"

[target."cfg(target_os = \"windows\")".dependencies]
futures-lite = "2.5"
flume = { version = "0.11", optional = true }
atomic-waker = { version = "1.1.2", optional = true }
windows = { version = "0.57", features = [
    "Devices_Enumeration",
    "Devices_HumanInterfaceDevice",
    "Foundation",
    "Foundation_Collections",
    "Storage",
    "Storage_Streams",
    "Win32_System_WinRT",

    "Win32_Devices_HumanInterfaceDevice",
    "Win32_Foundation",
    "Win32_Security",
    "Win32_Storage_FileSystem",
    "Win32_System_IO",
    "Win32_System_Threading",
    "Win32_Devices_DeviceAndDriverInstallation"
]}

[target."cfg(target_os = \"linux\")".dependencies]
tokio = { version = "1", features = ["net"], optional = true }
async-io = { version = "2", optional = true }
nix = { version = "0.27", features = ["fs", "ioctl"] }

[target."cfg(target_os = \"macos\")".dependencies]
async-lock = "2"
async-channel = "1"
bytes = "1"
core-foundation = "0.9"
io-kit-sys = "0.4"
mach2 = "0.4"

[dev-dependencies]
simple_logger = "5"
futures-lite = "2.5.0"
pollster = { version = "0.4.0", features = ["macro"] }
async-io = "2.4.0"
tokio = { version = "1", features = ["full"] }