[package]
name = "wasm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
async-hid = { path = "../../" }

[target."cfg(target_arch = \"wasm32\")".dependencies]
console_error_panic_hook = "0.1"
console_log = "1"
wasm-bindgen-futures = "0.4"

[target."cfg(not(target_arch = \"wasm32\"))".dependencies]
simple_logger = "4"
pollster = "0.3"